# rgbd_numpy

./: CMakeLists.txt  README.md  package.xml
kinect_numpy_tools/: CMakeLists.txt  TO-DO  package.xml  pr2_trial_notes  setup.py
kinect_numpy_tools/launch/: kinect_numpy.launch  pr2_stereo_numpy.launch  test_Cloud2Numpy.launch
kinect_numpy_tools/scripts/: images_to_cloud.py  rgbd_to_xyz.py  test_Cloud2Numpy.py  test_Cloud2Numpy2.py
kinect_numpy_tools/src/kinect_numpy_tools/: numpy_msg.py
launch/: convert_pointclouds.launch
rgbd_numpy/: CMakeLists.txt  package.xml
rgbd_numpy/launch/: convert_images.launch  convert_pointcloud2.launch
rgbd_numpy/msg/: _Floats.py
rgbd_numpy/scripts/: python_images.py  python_pointcloud2.py  python_pointclouds.py
rospy/src/rospy/: numpy_msg.py  numpy_nd_msg.py
rospy/test_nodes/: numpy_depth.py  numpy_rgb.py  talker.py
scripts/: python_images.py  python_pointclouds.py
