<?xml version="1.0"?>
<package>
  <name>rgbd_numpy</name>
  <version>0.0.0</version>
  <description>Converts RGBD camera data between PointCloud2 msgs, Image msgs, and Numpy arrays.</description>

  <maintainer email="ruebenm@onid.oregonstate.edu">Matthew Rueben</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>

</package>